services/infra/k8s/business-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business-depl
spec:
  selector:
    matchLabels:
      app: business-depl
  template:
    metadata:
      labels:
        app: business-depl
    spec:
      containers:
      - name: business-depl
        image: basantxbs/engineering-hub:business
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 2258
---
apiVersion: v1
kind: Service
metadata:
  name: business-clusterip-srv
spec:
  selector:
    app: business
  ports:
    - name: business
      protocol: TCP
      port: 3004
      targetPort: 3004
