services/infra/k8s/engineer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engineer-depl
spec:
  selector:
    matchLabels:
      app: engineer-depl
  template:
    metadata:
      labels:
        app: engineer-depl
    spec:
      containers:
      - name: engineer-depl
        image: basantxbs/engineering-hub:engineer
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 2257
---
apiVersion: v1
kind: Service
metadata:
  name: engineer-clusterip-srv
spec:
  selector:
    app: engineer
  ports:
    - name: engineer
      protocol: TCP
      port: 3003
      targetPort: 3003
