services/infra/k8s/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: basantxbs/engineering-hub:payment
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 2254
---
apiVersion: v1
kind: Service
metadata:
  name: payment-clusterip-srv
spec:
  selector:
    app: payment
  ports:
    - name: payment
      protocol: TCP
      port: 3005
      targetPort: 3005
